syntax = "proto3";

package wso2.discovery.api;

import "wso2/discovery/api/Endpoint.proto";
import "wso2/discovery/api/Resource.proto";
import "wso2/discovery/api/endpoint_security.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.gateway.discovery.api";
option java_outer_classname = "ApiProto";
option java_multiple_files = true;

// [#protodoc-title: Api]

// API config model
message Api {
	string id = 1;
	string title = 2;
	string version = 3;
	string swaggerVersion = 4;
	string description = 5;
	repeated Endpoint productionUrls = 6;
	repeated Endpoint sandboxUrls = 7;
	repeated Resource resources = 8;
	string basePath = 9;
	string tier = 10;
	string apiLifeCycleState = 11;
	repeated string securityScheme = 12;
	EndpointSecurity endpointSecurity = 13;
	string authorizationHeader = 14;
	bool disableSecurity = 15;
	string vhost = 16;
}
